# chunking-comparition

./: .gitignore  README.md  chunkers.py  dataset_rag.json  ingest_chuncks.py  llm.py  main.py  pyproject.toml  requirements.txt  retrieval_chain.py  test_retrieval.py
chunck_agent/: interface.py  prompts.py  schemas.py  utils.py
chunk_agent/: graph.py
chunk_agent/nodes/: make_section_node.py
config/: settings.py
converted_files/: 2512.22190v1.md
supabase/: database_controller.py
supabase_utils/: database_controller.py  semantic_database.sql
tests/: setup_verification.py
utils/: retrieval_chain.py
